# ros2_ws

./: .gitignore
arduino/Mega/MEGA_main/: MEGA_main.ino  mega_v6.ino  pins_mega.h  protocol.h
arduino/Uno/UNO_main/: UNO_main.ino  pins_uno.h  protocol.h
arduino/Uno/uno_pins_selftest.ino/: uno_pins_selftest.ino.ino
src/Vision_IA/: package.xml  setup.cfg  setup.py
src/Vision_IA/Vision_IA/: camera.py  vision_IA.py
src/Vision_IA/launch/: Vision_launch.py
src/dual_serial_bridge/: MANIFEST.in  package.xml  setup.cfg  setup.py
src/dual_serial_bridge/config/: bridges.params.yaml
src/dual_serial_bridge/dual_serial_bridge/: json_utils.py  mega_bridge.py  mega_driver.py  serial_utils.py  system_monitor.py  uno_bridge.py  uno_driver.py
src/dual_serial_bridge/launch/: dual_serial_bridges.launch.py  start_robot.launch.py
src/dual_serial_bridge/resource/: dual_serial_bridge
src/rica_package/: package.xml  setup.cfg  setup.py
src/rica_package/config/: xbox.yaml
src/rica_package/launch/: rica_real_ihm.launch.py  rica_teleop.launch.py  rica_unified_foxglove.launch.py  sim_teleop.launch.py  urdf.launch.py
src/rica_package/resource/: rica_package
src/rica_package/rica_package/: connexion.py  diff_div_sim.py  diff_drive_sim.py  joint_teleop.py  rica_bridge.py  rica_legs_teleop.py
src/rica_package/scripts/: rica_unified_teleop.py
src/rica_package/urdf/: rica.urdf
src/sysmap_package/: package.xml  setup.cfg  setup.py
src/sysmap_package/launch/: start_control.launch.py
src/sysmap_package/meshes/: base.STL  gliss_boites.STL  gliss_bras.STL  gliss_poteaux.STL  rot_pince.STL  verrin.STL
src/t16000m_teleop/: package.xml  setup.cfg  setup.py
src/test_package/: package.xml  setup.py
src/vision_ia/: package.xml  setup.cfg  setup.py
(+24 files in other folders)
