<?xml version="1.0"?>
<package format="3">
  <name>rica_package</name>
  <version>0.0.1</version>
  <description>RICA control and visualization (Python)</description>

  <maintainer email="you@example.com">Ilias</maintainer>
  <license>Apache-2.0</license>

  <!-- IMPORTANT: ament_python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- deps run-time -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- pour l’écosystème que tu lances -->
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <!-- CRUCIAL: indique à colcon que c’est un package Python -->
    <build_type>ament_python</build_type>
  </export>
</package>
